--- a/mysql/utf8mb4.cnf
+++ b/mysql/utf8mb4.cnf
@@ -8,3 +8,7 @@ default-character-set = utf8mb4
 character-set-client-handshake = FALSE
 character-set-server = utf8mb4
 collation-server = utf8mb4_unicode_ci
+
+
+[inonodb]
+innodb_buffer_pool_size=64MB
