--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,1 +1,5 @@
-FROM redis
+FROM redis:alpine
+
+COPY redis.conf /usr/local/etc/redis/redis.conf
+
+CMD [ "redis-server", "/usr/local/etc/redis/redis.conf" ]
