--- a/postgreps/docker-compose.yml
+++ b/postgreps/docker-compose.yml
@@ -6,11 +6,11 @@ services:
       - POSTGRES_USER=saleor
       - POSTGRES_PASSWORD=saleor
     networks:
-      - custom
+      - robo
     container_name: docker_postgreps
     ports:
       - '5432:5432'
 
 networks:
-  custom:
+  robo:
     external: true
