--- a/redis/docker-compose.yml
+++ b/redis/docker-compose.yml
@@ -3,11 +3,11 @@ services:
   db:
     build: .
     networks:
-      - custom
+      - robo
     container_name: docker_redis
     ports:
       - '6380:6379'
 
 networks:
-  custom:
+  robo:
     external: true
