--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -497,7 +497,7 @@ slave-priority 100
 # 150k passwords per second against a good box. This means that you should
 # use a very strong password otherwise it will be very easy to break.
 #
-requirepass robo2025
+requirepass robo@2025
 
 # Command renaming.
 #
