--- a/kubernetes/dashboard/dashboard-ingress.yaml
+++ b/kubernetes/dashboard/dashboard-ingress.yaml
@@ -4,7 +4,7 @@ metadata:
   name: kubernetes-dashboard
   namespace: kube-system
   annotations:
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
     nginx.ingress.kubernetes.io/secure-backends: "true"
 spec:
   tls:
