--- a/kubernetes/robo/go-ssoserver.env.yaml
+++ b/kubernetes/robo/go-ssoserver.env.yaml
@@ -4,9 +4,6 @@ metadata:
   name: ssoserver
 spec:
   replicas: 1
-  selector:
-    matchLabels:
-      app: ssoserver
   template:
     metadata:
       labels:
@@ -15,6 +12,7 @@ spec:
       containers:
       - name: ssoserver
         image: robo2025/go-ssoserver:dev
+        imagePullPolicy: always
         ports:
           - containerPort: 8000
         envFrom:
