--- a/kubernetes/robo/slncenter-api.yaml
+++ b/kubernetes/robo/slncenter-api.yaml
@@ -2,7 +2,9 @@ apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
   name: slncenter-api
+  namespace: test
 spec:
+  replicas: 2
   template:
     metadata:
       labels:
@@ -16,8 +18,6 @@ spec:
               value: dev
             - name: SSO_HOST
               value: https://testapi.robo2025.com/sso/server/verify
-            - name: MYSQL_DSN
-              value: 127.0.0.1
           command: ["/bin/sh","-c"]
           args:
             -  slncenter -l :9008 -d "127.0.0.1"
@@ -29,6 +29,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: slncenter-api
+  namespace: test
 spec:
   type: NodePort
   ports:
