--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,12 +1,5 @@
 FROM nginx
 
-#COPY nginx.conf /etc/nginx/nginx.conf
-
-
-#COPY nginx.conf /etc/nginx/conf.d/alpine.conf
-
-# RUN mkdir -p /etc/nginx/sites-enabled/\
-#     && ln -s /etc/nginx/sites-available/my_nginx.conf /etc/nginx/sites-enabled/\
-#     && rm /etc/nginx/conf.d/default.conf
+EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
